small change commit

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form id="addlist">
     <div>
         <label for="items"> </label>
-        <input type="text" placeholder= "Your todos here" id="item" required > <button id="add">Add Items</button>
+        <input type="text" placeholder= "Your text here" id="item" required > <button id="add">Add Items</button>
         <br><br>
          
     </div>
